# avali.best-homepage

./: Cargo.toml  Rocket.toml  readme.md
source/: body-layout.css  cookie.js  embed.js  img-layout.css  imggrid.css  main.css  shared.js  slider.css  table.css
source/dropdown/: dropdown.css  dropdown.js
source/fonts/: font.css
source/message/: message.css  message.js
source/old/: imggrid.css
source/pages/: profile.css
src/: cassandra.rs  e.rs.old  login.rs  main.rs  profile.rs  res.rs  user.rs  userFiles.rs
templates/: embed.html.tera  login.html.tera  main.html.tera  profile.html.tera  register.html.tera
